--- a/article-details.html
+++ b/article-details.html
@@ -121,7 +121,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Portfolio Website</h5>
                   <p class="card-text">This is a website where you can display your work and who you are.</p>
-                  <a href="#" class="buttonTemplate">Coming Soon</a> <!-- View Template -->
+                  <a href="https://cooper55555.github.io/Portfolio/" class="buttonTemplate">View Template</a> <!-- View Template -->
                 </div>
               </div>
             </div>
@@ -134,7 +134,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Photo Website</h5>
                   <p class="card-text">This is a website where you can display your favorite pictures.</p>
-                  <a href="TemplateGallery/index.html" class="buttonTemplate">View Template</a> <!-- View Template -->
+                  <a href="#" class="buttonTemplate">Coming Soon</a> <!-- View Template -->
                 </div>
               </div>
             </div>
@@ -147,7 +147,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Birthday Website</h5>
                   <p class="card-text">This is a website that you can use to promote your birthday party.</p>
-                  <a href="#" class="buttonTemplate">Coming Soon</a> <!-- View Template -->
+                  <a href="#" class="buttonTemplate">Under Construction</a> <!-- View Template -->
                 </div>
               </div>
             </div>
