--- a/article-details.html
+++ b/article-details.html
@@ -147,7 +147,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Birthday Website</h5>
                   <p class="card-text">This is a website that you can use to promote your birthday party.</p>
-                  <a href="#" class="buttonTemplate">Under Construction</a> <!-- View Template -->
+                  <a href="https://cooper55555.github.io/Birthday-Boy/" class="buttonTemplate">View Template</a> <!-- View Template -->
                 </div>
               </div>
             </div>
